# Test_FastApi

./: README.md  main.py  pyproject.toml
templates/: index.html  login.html  private.html
